# temp_xc

./: .dockerignore  .gitignore  .lycheeignore  .markdownlint.jsonc  .trillium-guide.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RUNPOD_INSTRUCTIONS.md  SPRINT_PIPELINE.md  check-tags.sh  get-tags.sh  launch-sandbox.sh  pyproject.toml  requirements_torchgpu.txt  run-checks.sh  torchgpu_packages.txt
.claude/: settings.json  y_pod_kickoff.md  y_pod_runbook.md
.claude/commands/: review-code.md  review-data.md  review-doc.md  review-experiment.md  review-math.md  review.md
.githooks/: pre-commit
.github/workflows/: agent-review.yml  ci.yml  link-check.yml
docs/: Tags.md  huggingface-artifacts.md
docs/.obsidian/: app.json  appearance.json
docs/andre/: andre_about_me.md  nlp_feature_map.md  nlp_gemma2_summary.md  nlp_gemma2_sweep.md  nlp_sweep.md  research_log  tx_v_sae.md  v2_tx_v_sae.md
docs/aniket/: aniket_about_me.md  coupled_features_plan.md  coupled_features_summary.md  hmm_mathematical_structure.md  logging_format.md  reading_list.md  sprint_5k_autointerp_plan.md  sprint_coding_dataset_plan.md  sprint_feature_geometry_results.md
docs/bill/: bill_about_me.md
docs/dmitry/: BW_approach_2.md  baum_welch_sae_idea.md  bw_factorial_rho_2k_results.md  dmitry_about_me.md  mera_temporal_sae.md  probing_hidden_state.md  temporal_sae_tensor_network_writeup (1).md  tn_arch_chat
docs/han/: EXPERIMENT_INDEX.md  (+1 more)
notebooks/: requirements.txt  sae.txt  sae_token_embeddings.ipynb  temporal_crosscoders.ipynb  temporal_crosscoders_v3 (1).ipynb  temporal_crosscoders_v3.ipynb  temporal_crosscoders_v4.ipynb  temporal_crosscoders_v5.ipynb
papers/: are_saes_useful.md  autoencoding_slow.md  crosscoders.md  priors_in_time.md  priors_in_time_important_sections.md  reasoning_features.md  sparse_but_wrong.md  temporal_sae.md
scripts/: aggregate_results.py  analyze_activation_spans.py  analyze_decoder_alignment_alive.py  analyze_saebench.py  bootstrap.sh  bootstrap_claude.sh  cache_reasoning_traces.py  compute_temporal_metrics.py  debug_normalize.py  debug_tfa_stability.py  download_models.sh  fetch_from_trillium.sh  fetch_mess3_ablation.sh  fetch_runpod_fmap.sh  fetch_saebench_b64.sh  fetch_saebench_results.sh  fetch_trillium_results.sh  fix_crosscoder_n500.sh  hf_sync.py  hf_upload_ckpts.py  hf_upload_data.py  hf_upload_phase5b_ckpts.py  hf_upload_phase7_ckpts.py  hf_upload_phase7_data.py  inspect_traces.py  joint_umap_visualization.py  launch_seed1_h100_batch.sh  merge_results.py  phase0_bootstrap.sh  plot_fig5_delta_auc_heatmaps.py  plot_fig6_delta_auc_vs_rho.py  plot_fig7_auc_loss_vs_k.py  plot_fig8_global_vs_local.py  plot_fig9_denoising_vs_T.py  plot_rho_sweep.py  plot_training_curves.py  prefetch_scrappy_models.py  prefetch_scrappy_models.sh  prefetch_text_dataset.sh  probe_hidden_state.py  (+84 more)
src/: lit_tree.py
temporal_crosscoders/: README.md  config.py  data.py  metrics.py  models.py  requirements.txt  run_sweep.sh  sweep.py  train.py  viz.py
tests/: test_aliased_benchmark.py  test_backtracking_labels.py  test_data.py  test_data_generation.py  test_metrics.py  test_models.py  test_phase7_subseq_z_variants.py  test_toy_data_smoke.py  test_toy_model_specs.py  test_toy_sweep_equivalence.py  test_v2_smoke.py
(+4416 files in other folders)
