[project]
name = "temp-xc"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
# Dependencies for experiments/separation_scaling/ (ported from sae_day).
# Install with: uv sync --extra separation-scaling
separation-scaling = [
    "torch>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "transformer-lens>=2.0",
    "jax>=0.4",
    "jaxlib>=0.4",
    "simplexity @ git+https://github.com/Astera-org/simplexity.git@review/nonergodic-pr172",
]

[dependency-groups]
dev = [
    "pytest",
]
