[project]
name = "temp-xc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "sae-lens>=4.0",
    "transformer-lens",
    "scipy",
    "matplotlib",
    "plotly",
    "tqdm",
    "numpy",
    "seaborn",
    "safetensors",
    "anthropic",
    "openai",
    "datasets",
    "wandb",
    # Used by feature_map.py (PCA→UMAP→KMeans) and temporal_metrics.py
    "scikit-learn",
    "umap-learn",
    "hdbscan",
    "pandas",
    # narwhals is a runtime dep of plotly 6+ for DataFrame back-end dispatch;
    # not always pulled in transitively.
    "narwhals",
    # EleutherAI delphi (SOTA auto-interp pipeline, Paulo et al. ICLR 2025)
    # Not on PyPI under its canonical name; installed from source.
    "eai-delphi @ git+https://github.com/EleutherAI/delphi",
]

[tool.setuptools.packages.find]
include = ["src*", "temporal_crosscoders*"]

[project.optional-dependencies]
# Dependencies for experiments/mess3_mat_ablation/ (Dmitry's sae_day
# pipeline, vendored at runtime via git archive from origin/dmitry).
# Install with: uv sync --extra separation-scaling
#
# Mirrors Dmitry's group in his pyproject.toml so setups on aniket +
# dmitry converge on the same deps.
separation-scaling = [
    "pyyaml>=6.0",
    "jax>=0.4",
    "jaxlib>=0.4",
    "simplexity @ git+https://github.com/Astera-org/simplexity.git@review/nonergodic-pr172",
]

[dependency-groups]
dev = [
    "pytest",
]
